2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m: Add methods -_becomeRulerClient and
	-_resignRulerClient to set self as the ruler client and to resign
	from that. These get called when self becomes first responder or
	resigns from first responder.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSPrintInfo.h,
	* Source/externs.m: Add new MacOSX strings for NSPrintInfo.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSWorkspace.h,
	* Source/NSWorkspace.m: Add a few MacOSX methods with dummy implementations.
	* Source/externs.m: Add new notification strings for NSWorkspace.

2011-06-11 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h
	* Source/NSPopUpButton.m
	* Source/NSMatrix.m
	* Source/NSLayoutManager.m
	* Source/NSTextView.m
	* Source/NSDocumentController.m
	* Source/externs.m: Add a few key value bindings.

2011-06-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep+ICNS.m: Remove comment about libicns
	being GPL, it is now LGPL 2.1.

2011-06-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView_actions.m (-moveLeftAndModifySelection:,
	-moveRightAndModifySelection:, -moveWordLeft:,
	-moveWordLeftAndModifySelection:, -moveWordRight:,
	-moveWordRightAndModifySelection:, -setBaseWritingDirection:range:):
	Add basic implementation for these methods.

2011-06-09 13:49-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTheme.m: Move notifications handling code to
	setTheme: instead and add code which deactivates the notifications
	and then starts listening again after activate is called.

2011-06-09 13:43-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTheme.m: Move call to listen to default changes to
	activate instead of +initialize.

2011-06-07 07:40-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSMenuItem.m: Remove temporary fix.

2011-06-06 Fred Kiefer <FredKiefer@gmx.de>
