@@ -1,5 +1,9 @@
 2011-06-13 Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/NSPrintInfo.m: Add keyed coding.
+
+2011-06-13 Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/NSTextView.m: Add methods -_becomeRulerClient and
 	-_resignRulerClient to set self as the ruler client and to resign
 	from that. These get called when self becomes first responder or
